# bignose-changelog-chug

./: .build.yaml  .editorconfig  .gitignore  .isort.cfg  ChangeLog  Makefile  README  pyproject.toml  setup.py
src/: module.mk
src/chug/: model.py  parsers.py
src/chug/parsers/: __init__.py  core.py  rest.py
test/: module.mk  test_model.py  test_parsers.py  test_parsers_rest.py  test_util_metadata.py
util/: metadata.py
util/packaging/: module.mk  python.mk  twine.mk
util/static-analysis/: check-text-files-format  module.mk
