# pyproject.toml
# Python project metadata and build settings for this code base.
# Documentation:
#     <URL:https://peps.python.org/pep-0517/>
#     <URL:https://peps.python.org/pep-0518/>
#     <URL:https://peps.python.org/pep-0621/>

[build-system]

# Minimum requirements for the build system.
requires = [

    # Framework for working with Python packages.
    # Documentation: <URL:https://setuptools.pypa.io/>.
    "setuptools >= 62.4.0",

    ]

# Path to the Python object to perform the build.
build-backend = "setuptools.build_meta"


# Local-variables:
# coding: utf-8
# mode: conf
# mode: toml
# End:
# vim: fileencoding=utf-8 filetype=toml :
