# pyproject.toml
# Python project metadata and build settings for this code base.
# Documentation:
#     <URL:https://peps.python.org/pep-0517/>
#     <URL:https://peps.python.org/pep-0518/>
#     <URL:https://peps.python.org/pep-0621/>

[project]

# Name of the Python distribution to build.
name = "changelog-chug"

# Text file containing detailed description of the distribution.
readme = { file = "README", content-type = "text/x-rst" }

# Names of fields that must be dynamically computed by the build system.
dynamic = [
    "version",
    ]

[project.optional-dependencies]

static-analysis = [

    # McCabe code complexity measurement tool.
    # Documentation: <URL:https://github.com/pycqa/mccabe>.
    "mccabe ~= 0.7",

    # Static code checker for Python style recommendations.
    # Documentation: <URL:https://pycodestyle.pycqa.org/>.
    "pycodestyle ~= 2.12",

    ]

[build-system]

# Minimum requirements for the build system.
requires = [

    # Framework for working with Python packages.
    # Documentation: <URL:https://setuptools.pypa.io/>.
    "setuptools >= 62.4.0",

    ]

# Path to the Python object to perform the build.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]

# Text file containing the distribution version value.
version = { file = "VERSION" }


# Local-variables:
# coding: utf-8
# mode: conf
# mode: toml
# End:
# vim: fileencoding=utf-8 filetype=toml :
